          the highpass level in relation to unfiltered output. -6 dB or 0.5 is
          approximately correct.

        * resid-fp/filter.h: Reduce the level difference between the lp, bp and hp.

        * filter.cc: Slightly more resonance for 8580 (Q in [0.7, 2.3]).

        * ../sid/sid.cc: Tweak distortion parameters.

2008-12-05  Antti S. Lankila  <alankila@bel.fi>

	Sync against V27 patch version. Filter updates described below.

	* Reduce Q maximum to 2.2 or so. This may still be slightly too much,
	  but it's hard to say exactly...

	* Arrange for about 3 dB boost of lowpass output that is independent
	  of state variable mixing or other feedback. This seems to produce
	  the right kind of sounds for songs like AMJ's Blasphemy.

	* Assume that bp is slightly louder than bp (= more distorted).
	  This seems to help against very large number of songs which sport
	  lead sounds and effects distorted in a smooth, bassy way.

	* Parameter tuneup.

2008-10-31  Antti S. Lankila  <alankila@bel.fi>

	Sync against V25 patch version. Filter updates described below.

	* Tweak filter algorithm to do some state variable mixing in the
	  6581 code path. This corresponds with assumed output impedance of
	  the SID "amplifiers", and is separate effect to the output strip
	  backmixing.
	
	* Retire the V24 attempt of dynamically adjusting BP distortion
	  threshold. It doesn't really seem to work.

	* Increase Q value maximum to 2.5. This may be too much, but it sounds
	  fine to me.

	* JT's Star Ball was very distorted when played by V24.  This related
	  to the hardclipping I had assumed to occur in the filter output amp,
	  but maybe that theory is incorrect. I now only add distortion to the
	  unfiltered voice path, but I'm not happy about it.

2008-08-29  Antti S. Lankila  <alankila@bel.fi>

	* Optimized resampling to be about 2x faster through using aliasing
	  to increase passband width and hence reduce FIR length.
	  
	* Fixed some valgrind warnings.
	